// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Actions Move to Far Outer Zone 1`] = `
Object {
  "attachedProperties": Array [
    Object {
      "Expanded": null,
      "Fixed Size (px)": null,
      "Stretch": 1,
    },
    Object {
      "Expanded": null,
      "Fixed Size (px)": null,
      "Stretch": 1,
    },
  ],
  "children": Array [
    Object {
      "attachedProperties": Array [],
      "children": Array [],
      "properties": Object {
        "backgroundColor": "red",
        "flexSize": 1,
        "prunable": false,
      },
      "typeName": 0,
      "uuid": "e8cb8a20-cd0b-4c53-ac5f-8137dffd95fc",
    },
    Object {
      "attachedProperties": Array [],
      "children": Array [],
      "properties": Object {
        "backgroundColor": "blue",
        "prunable": false,
      },
      "typeName": 0,
      "uuid": "7f4d05ff-6ccd-4bd7-aac5-93f18e131c6d",
    },
  ],
  "properties": Object {
    "horizontal": true,
  },
  "typeName": 0,
  "uuid": "root",
}
`;

exports[`Layout Actions Relative drop zones Move to Center Drop Zone 1`] = `
Object {
  "attachedProperties": Array [
    Object {
      "Expanded": null,
      "Fixed Size (px)": null,
      "Stretch": 1,
    },
  ],
  "children": Array [
    Object {
      "attachedProperties": Array [
        Object {},
        Object {},
      ],
      "children": Array [
        Object {
          "attachedProperties": Array [],
          "children": Array [],
          "properties": Object {
            "backgroundColor": "blue",
            "prunable": false,
          },
          "typeName": 0,
          "uuid": "7f4d05ff-6ccd-4bd7-aac5-93f18e131c6d",
        },
        Object {
          "attachedProperties": Array [],
          "children": Array [],
          "properties": Object {
            "backgroundColor": "red",
            "prunable": false,
          },
          "typeName": 0,
          "uuid": "e8cb8a20-cd0b-4c53-ac5f-8137dffd95fc",
        },
      ],
      "properties": Object {
        "ForegroundIndex": 1,
        "caption": "Tab Panel",
        "prunable": true,
      },
      "typeName": 2,
      "uuid": "<generated>",
    },
  ],
  "properties": Object {},
  "typeName": 0,
  "uuid": "root",
}
`;

exports[`Layout Actions Relative drop zones Move to Inner Drop Zone 1`] = `
Object {
  "attachedProperties": Array [
    Object {
      "Expanded": null,
      "Fixed Size (px)": null,
      "Stretch": 1,
    },
  ],
  "children": Array [
    Object {
      "attachedProperties": Array [
        Object {
          "Expanded": null,
          "Fixed Size (px)": null,
          "Stretch": 1,
        },
        Object {
          "Expanded": null,
          "Fixed Size (px)": null,
          "Stretch": 1,
        },
      ],
      "children": Array [
        Object {
          "attachedProperties": Array [],
          "children": Array [],
          "properties": Object {
            "backgroundColor": "blue",
            "prunable": false,
          },
          "typeName": 0,
          "uuid": "7f4d05ff-6ccd-4bd7-aac5-93f18e131c6d",
        },
        Object {
          "attachedProperties": Array [],
          "children": Array [],
          "properties": Object {
            "backgroundColor": "red",
            "prunable": false,
          },
          "typeName": 0,
          "uuid": "e8cb8a20-cd0b-4c53-ac5f-8137dffd95fc",
        },
      ],
      "properties": Object {
        "caption": "Stack Panel",
        "horizontal": true,
        "prunable": true,
      },
      "typeName": 0,
      "uuid": "<generated>",
    },
  ],
  "properties": Object {},
  "typeName": 0,
  "uuid": "root",
}
`;

exports[`Layout Actions Relative drop zones Move to Outer Drop Zone 1`] = `
Object {
  "attachedProperties": Array [
    Object {
      "Expanded": null,
      "Fixed Size (px)": null,
      "Stretch": 1,
    },
  ],
  "children": Array [
    Object {
      "attachedProperties": Array [
        Object {
          "Expanded": null,
          "Fixed Size (px)": null,
          "Stretch": 1,
        },
        Object {
          "Expanded": null,
          "Fixed Size (px)": null,
          "Stretch": 1,
        },
      ],
      "children": Array [
        Object {
          "attachedProperties": Array [],
          "children": Array [],
          "properties": Object {
            "backgroundColor": "blue",
            "prunable": false,
          },
          "typeName": 0,
          "uuid": "7f4d05ff-6ccd-4bd7-aac5-93f18e131c6d",
        },
        Object {
          "attachedProperties": Array [],
          "children": Array [],
          "properties": Object {
            "backgroundColor": "red",
            "prunable": false,
          },
          "typeName": 0,
          "uuid": "e8cb8a20-cd0b-4c53-ac5f-8137dffd95fc",
        },
      ],
      "properties": Object {
        "caption": "Stack Panel",
        "horizontal": true,
        "prunable": true,
      },
      "typeName": 0,
      "uuid": "<generated>",
    },
  ],
  "properties": Object {},
  "typeName": 0,
  "uuid": "root",
}
`;
